--- a/exe01.html
+++ b/exe01.html
@@ -45,8 +45,8 @@
     <button id="zoom-out">-</button>
     <button id="zoom-in">+</button>
     </div>
-    <script type="module" src="js/main.js"></script>
-    <!-- <script>
+    <!-- <script type="module" src="js/main.js"></script> -->
+    <script>
       var map = new ol.Map({
         target: 'map',
         layers: [
@@ -70,7 +70,7 @@
         var zoom = view.getZoom();
         view.setZoom(zoom + 1);
       };
-    </script> -->
+    </script>
 
   </body>
 </html>
