--- a/exe01.html
+++ b/exe01.html
@@ -46,8 +46,7 @@
     <button id="zoom-in">+</button>
     </div>
     <!-- <script type="module" src="js/main.js"></script> -->
-    <script>
-      var map = new ol.Map({
+      <!-- var map = new ol.Map({
         target: 'map',
         layers: [
           new ol.layer.Tile({
@@ -69,7 +68,7 @@
         var view = map.getView();
         var zoom = view.getZoom();
         view.setZoom(zoom + 1);
-      };
+      }; -->
     </script>
 
   </body>
