Revert "no message"
This reverts commit 73dadeec7e91d269b3984cbf75cb1e24b3865c41.

--- a/exe01.html
+++ b/exe01.html
@@ -46,7 +46,8 @@
     <button id="zoom-in">+</button>
     </div>
     <!-- <script type="module" src="js/main.js"></script> -->
-      <!-- var map = new ol.Map({
+    <script>
+      var map = new ol.Map({
         target: 'map',
         layers: [
           new ol.layer.Tile({
@@ -68,7 +69,7 @@
         var view = map.getView();
         var zoom = view.getZoom();
         view.setZoom(zoom + 1);
-      }; -->
+      };
     </script>
 
   </body>
