--- a/lotto.html
+++ b/lotto.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="css/lotto.css">
+<script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/lotto.js"></script>
 <body>
     <main>
@@ -23,11 +24,67 @@
                 </div>
             </div>
             <div class="bottom-contents">
-                <button onclick="javascript:start();" class="click-button">
+                <div class="bottom-temp-box">
+                </div>
+                <div class="bottom-temp-box">
+                    <button onclick="javascript:start();" class="click-button">
                     <img src="images/lotto_button.png" alt="" class="buttonImg">
-                </button>
+                    </button>
+                </div>
+                <div class="bottom-temp-box" id="result">
+                    <ul>
+                        <li id="li_one">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                        <li id="li_two">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                        <li id="li_three">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                        <li id="li_four">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                        <li id="li_five">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                        <li id="li_six">
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>&nbsp;&nbsp;
+                            <a></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>    
-    </main>
+    </main> 
 </body> 
 </html>
